--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "daisyui": "^4.12.23",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "framer-motion": "^12.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
