--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.0.5",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "daisyui": "^4.12.23",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "framer-motion": "^12.4.1",
+    "multer": "^1.4.5-lts.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
