--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "daisyui": "^4.12.23",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.6.2",
     "multer": "^1.4.5-lts.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +31,7 @@
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.20.0",
