--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.485.0",
     "multer": "^1.4.5-lts.1",
+    "pagination": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
